[package]
name = "wificomp"
version = "0.1.0"
edition = "2021"
description = "WiFi adapter comparison tool"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
libc = "0.2"
